argocd/utility/homer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homer-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - hosts:
    - homer.homelab.bowmans.site
    secretName: homer-certificate
  rules:
    - host: homer.homelab.bowmans.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homer
                port:
                  number: 8080
