argocd/utility/homer/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homer-ingress-route
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homer.bowmans.site`)
      kind: Rule
      services:
      - name: homer
        port: 8080
  tls:
    secretName: homer-certificate
